GNOME Bugzilla – Bug 758901
wayland: old window size applied sometimes
Last modified: 2015-12-01 15:23:40 UTC
Summary: The when resizing/unmapping/mapping windows, the old (wrong) size sometimes is applied to the window. How reproducible: Always with Wayland backend, not reproducible with X11 backend Steps to reproduce: 1. From gtk source directory, run ./demos/icon-browser/gtk3-icon-browser 2. Double click on "microphone-sensitivity-low" 3. Close the window 4. Double click on "microphone-sensitivity-medium" Actual result: The string "medium" is longer than "low" and the label is wrapped and printed outside the which is too small to hold the string. Expected result: The window is large enough so no wrapping occurs and the the label fits the window.
Created attachment 316597 [details] Events The wrong (old) size comes from an xdg_surface_configure event, gdk does set the new size but an event from the compositor reverts it. This looks quite similar to bug 755051 which was fixed with commit 3058c3e
Created attachment 316598 [details] [review] wayland: re-configure surface even if size matches gdk-wayland backend would not re-configure a surface when its size and scale match the known size and scale. But there might have a pending xdg_surface_configure() that would revert this change so we should re-configure even if the currently known size/scale match, otherwise we may end up with a wrong size after the xdg_surface_configure() is received.
Review of attachment 316598 [details] [review]: The patch fixes the symptom for me.
Review of attachment 316598 [details] [review]: .
attachment 316598 [details] [review] pushed as commit f37aa41 wayland: re-configure surface even if size matches